Reverted fixed panel-default - didn't work on mobile well.

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -17,7 +17,6 @@ $jumbotron-bg: 								white;
 .panel-default {
 	margin-right: auto;
 	margin-left: auto;
-	width: 600px;
 }
 
 .panel-body {
